fixed spacing issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -131,7 +131,7 @@ h4{
 
 
 .info{
-  padding: 75px;
+  padding: 60px;
   font-size: 22px;
   text-align:center;
 }
@@ -155,8 +155,8 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  /* position: relative; */
-  /* margin: 0 40px;  */
+  position: relative;
+  
 }
 
 .buttons{
